--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@ function validateForm() {
             alert(x+" and "+y+" "+"are"+" "+"Enemies");
             break;
       case 6:
-        alert(x+""+"and"+""+y+""+"are"+" "+"Secret Lovers");
+        alert(x+""+"and"+""+y+""+"are"+" "+" Secret Lovers");
                 break;
       case 7:
-                    alert(x+""+" and "+""+y+""+"are"+" "+"Friends");
+                    alert(x+""+" and "+""+y+""+"are"+" "+" Friends");
                     break;
       case 8:
-                        alert(x+" and "+""+y+""+"are"+" "+"Lovers");
+                        alert(x+" and "+""+y+""+"are"+" "+" Lovers");
                         break;
       case 9:
-                           alert(x+""+" and "+""+y+""+"are"+" "+"Admirers");
+                           alert(x+""+" and "+""+y+""+"are"+" "+" Admirers");
                             break;
       case 10:
-                                alert(x+""+" and "+""+y+" "+"are Married");
+                                alert(x+""+" and "+""+y+" "+" are Married");
                                 break;
       case 11:
-                                    alert(x+""+" and "+y+""+"are"+""+"Enemies");
+                                    alert(x+""+" and "+y+""+"are"+" "+" Enemies");
                                     break;
       case 12:
-                                        alert(x+""+" and "+""+y+" "+"are"+" "+"Secret Lovers");
+                                        alert(x+""+" and "+""+y+" "+"are"+" "+" Secret Lovers");
                                         break;
             
       case 13:
-    alert(x+""+" and "+""+y+" "+"are"+" "+"Friends");
+    alert(x+""+" and "+""+y+" "+"are"+" "+" Friends");
     break;
       case 14:
-        alert(x+""+" and "+y+""+" are"+""+"Lovers");
+        alert(x+""+" and "+y+""+" are"+" "+" Lovers");
         break;
       case 15:
-            alert(x+""+" and "+""+y+""+"are"+""+"Admirers");
+            alert(x+""+" and "+""+y+""+"are"+" "+" Admirers");
             break;
       case 16:
-                alert(x+""+" and "+" "+y+" "+"are Married");
+                alert(x+""+" and "+" "+y+" "+" are Married");
                 break;
       case 17:
-                    alert(x+""+" and "+""+y+""+"are"+""+"Enemies");
+                    alert(x+""+" and "+""+y+""+"are"+" "+" Enemies");
                     break;
       case 18:
-                        alert(x+""+" and "+""+y+""+"are"+""+"Secret Lovers");
+                        alert(x+""+" and "+""+y+""+"are"+""+" Secret Lovers");
                         break;
       case 19:
-                            alert(x+""+"and"+""+y+""+"are"+""+"Friends");
+                            alert(x+""+"and"+""+y+""+"are"+""+" Friends");
                             break;
 
 
@@ -91,7 +91,7 @@ function validateForm() {
 </head>
 <body>
 
-<form name="myForm"  onsubmit="return validateForm()" method="post">
+<form name="myForm"  onsubmit="return validateForm()">
    <h1>Flames</h1>
    <input type="text" name="fname" placeholder="Enter Firstname"><br>
    <input type="text" name="sname" placeholder="Enter Secondname"><br>
